crates/amaru/tests/snapshots/rewards__dreps_166.snap
---
source: crates/amaru/src/ledger/rewards.rs
expression: dreps
---
{
  "dreps": {
    "drep1y09hnm54lxqfhjp7arnzef68ucwsd7t3nq4yvvej94t8f8qg0tqdt": {
      "mandate": 186,
      "metadata": {
        "url": "https://meshjs.dev/governance/meshjs.jsonld",
        "content_hash": "237157ffba4e8db9aa3fbdac2d440483066d725326c819d3ba8e1ae5fffb4c00"
      }
    },
    "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w": {
      "mandate": 186,
      "metadata": null
    },
    "drep1y2fgxycu78q496nj2mzkf2qqedfhv8evw46jd6nus659z0g3n4n6r": {
      "mandate": 185,
      "metadata": null
    },
    "drep1y2j502uqsjl7ujrg5e73mxc2up2wu963r6eg44zdglzanncytjpxy": {
      "mandate": 184,
      "metadata": null
    },
    "drep1y2xuj82kwvjrnrgzsesh2yezg30neehkzwd9ed9kd20f2asze2l6z": {
      "mandate": 186,
      "metadata": null
    },
    "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z": {
      "mandate": 185,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    },
    "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74": {
      "mandate": 184,
      "metadata": {
        "url": "https://raw.githubusercontent.com/NanaSafo01/drep-metadata/main/WadaDrep.jsonld",
        "content_hash": "8a1971eaccf490599fc7e02c522f0c2012f8d9f0e3f6bcf938b7134b58c617c0"
      }
    },
    "drep1yftr2094dxeszxy944y9n5ms5eg3md28adlvk0vqwcn4pgc7kq6wr": {
      "mandate": 184,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/drep_test/Cardano%20Africa%20C.jsonld",
        "content_hash": "59830510a828097b58b8bf1bf23970c1e34a420cc5cb3fe4dce80aa1d8993f11"
      }
    },
    "drep1yfy9wajz7mrc6x5a4s23x5vttztqea6ajx9v83xcr6c5xlqxjx05p": {
      "mandate": 184,
      "metadata": null
    },
    "drep1yg3mcc7w6njqkgkafes9rsjchgud2euas83n7d87tewdkngpgk07n": {
      "mandate": 184,
      "metadata": null
    },
    "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc": {
      "mandate": 184,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/main/Cardano%20Africa%20C.jsonld",
        "content_hash": "d63edeb7d4b2398103dfc3db3ab409feebd88a1373402b59f8b38a2048b92fb1"
      }
    },
    "drep1yt4tspehdvggcd4e5cwsqlwulvyyrjj9jquuqu5wlyju9ns5wfc0z": {
      "mandate": 185,
      "metadata": null
    },
    "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l": {
      "mandate": 185,
      "metadata": null
    },
    "drep1ytax4rwzvdwamnu67j2uk9z00660lpzcvmlys6266l9kt5c262k7m": {
      "mandate": 184,
      "metadata": null
    },
    "drep1ytsy6uatehlmxymymrwuycph0s6ewwn0jxsnyfq6vs47h4sflw0dg": {
      "mandate": 185,
      "metadata": null
    },
    "drep1yvj9cn7cwc3wyrt3lclk2ua92lxd8uxqzju0qza8ky380uqjpzm8s": {
      "mandate": 184,
      "metadata": null
    },
    "drep1yvmeer7fcwng5ea3v7cw2g2uq352sm58xtmaphp5vqvcxycrzszhz": {
      "mandate": 185,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    }
  }
}