crates/amaru/tests/snapshots/rewards__dreps_172.snap
---
source: crates/amaru/src/ledger/rewards.rs
expression: dreps
---
{
  "delegations": {
    "keys": {
      "1bf1e138f2f8beabc963c94cc28ee8ed4b41744601f2edaf50b21efd": "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l",
      "1ec80930158084eb5c735fd9bfb1ec53b8b5001c4b39d32c116b4921": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
      "1fab5f9cba03290d7e25379c3df0a43450796895d5dacbb6b255e580": "drep1yfy9wajz7mrc6x5a4s23x5vttztqea6ajx9v83xcr6c5xlqxjx05p",
      "207c9ab177d332a654b9c0135df65d300aee237becc22ab8142f5cd3": "drep1ytg3f3uc0xda26q0q5fkg47dhlmdspm4hl3md8k6gcjk7zccfvsqc",
      "25b57d0e01bd657db7fddeb5528bddf88f1d9d445c992dffd3936f9e": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
      "40b3c98d3b5f5a7748829d612e9e1ccd5f429970abc9abfeae867af9": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
      "4d0abda0fa477aa2cdf365770e80f814aa62395b35a49f6fda21db99": "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn",
      "7c3ae2f2175c3d886b9daaa362533b7db1b30db6f2bafaed7569eeef": "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn",
      "86c769419aaa673c963da04e4b5bae448d490e2ceac902cb82e4da76": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
      "951fcc7230ca42c67077aeb005e041bb428d32f023edbfc3ac77a742": "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74",
      "9d4dcd7e454d2434164f4efb8edeb358d86a1dad9ec6224cfcbce3e6": "drep1y0gy6wwyuj6za8kamwm5rwmxxe5rk6pz4ckx3hmsfdjuujsr70shz",
      "a001d9ab043cfc10f49cce684408738c59f5b0810a244de32d462a1e": "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l",
      "a2ca2495e5be135760f68299660873861e753100042d1c891826b279": "drep1ytsy6uatehlmxymymrwuycph0s6ewwn0jxsnyfq6vs47h4sflw0dg",
      "aeb4548104cc2f404a81f77408c00f5f7ca38aa71add0ac6f7f4048c": "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc",
      "bfaa385c8eab7bbdc6c98b50413435b3d02b73de3c644e1384b801d4": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
      "c9e345aa4048ef863333d5dfa3bcdb0f05b905f484049cf1947a7c86": "drep1y2j502uqsjl7ujrg5e73mxc2up2wu963r6eg44zdglzanncytjpxy",
      "ce5bfef8d88f9ef013c841fc9e93aae6164d330e317727198b7ca1cb": "drep1y2xuj82kwvjrnrgzsesh2yezg30neehkzwd9ed9kd20f2asze2l6z",
      "cf1ef74bee52e2a7b03b3e3af80cf17ba914123cc514e85c0c01201e": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w",
      "d11b592fcc913605dbc42459d4ae8bb89c848e13926123bac85e2ab5": "drep1yftr2094dxeszxy944y9n5ms5eg3md28adlvk0vqwcn4pgc7kq6wr",
      "d3e3c4bf80f3ac8641af4a99214363bf4060deba1ed5c0d830b62c9e": "drep1y2fgxycu78q496nj2mzkf2qqedfhv8evw46jd6nus659z0g3n4n6r",
      "db4004c77d0d6371dc49aa87df4bcc90d5a02cc9f8096ba8b7430999": "drep1yfs2e9c42nq5fv2ac9ygxrhxllgaz9ms2g0xynaj7dpd58qwg2030",
      "db5e8ece0982acc4883de67c2e3411cc26bd56686a162074998c02bc": "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc",
      "edc52808d58a420ce2df3da8c7118c858c7aa136fa7b2b1baa3e81ed": "drep1ytax4rwzvdwamnu67j2uk9z00660lpzcvmlys6266l9kt5c262k7m",
      "f1a8e379127b811583070faf74db00d880d45027fe6171b1b69bd9ca": "drep1y28wyfxwyywajenkfcy0s9r3fqkvufm4stpxy80j4234qzsl80wwe",
      "fa4ca121f0b5a6537d807f3b325cb88db3a3f78de0e23c2d9d7f7102": "drep1yge5qzj9ggvk77rz0vcmq2rpzcgq563e6fmydjngelxtnmgz2g54e",
      "fd0e26443fd3dc2ec11cddfa1bdb94dfc476404154f9eb8caa3dfd1f": "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z",
      "fd1c740673b5b8840a12cfbbd4e6c5c243bf08bbece4c8b3258194b2": "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74",
      "ff2c8a08dbfcf8877c0471ee02dca414e64ef20b20b62dffda74fdeb": "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w"
    },
    "scripts": {}
  },
  "dreps": {
    "drep1y09hnm54lxqfhjp7arnzef68ucwsd7t3nq4yvvej94t8f8qg0tqdt": {
      "mandate": 187,
      "metadata": {
        "url": "https://meshjs.dev/governance/meshjs.jsonld",
        "content_hash": "237157ffba4e8db9aa3fbdac2d440483066d725326c819d3ba8e1ae5fffb4c00"
      }
    },
    "drep1y0gy6wwyuj6za8kamwm5rwmxxe5rk6pz4ckx3hmsfdjuujsr70shz": {
      "mandate": 190,
      "metadata": {
        "url": "https://2pzt5hfjckkkpzfl.public.blob.vercel-storage.com/drep/MeshInc-z5TmFSeSbfYqfExWNIJR2TuQ0ThlxK.jsonld",
        "content_hash": "7d157a834ed554bee0d0712d7733a366e6ac022598439b50a928e5a3cb61a8ed"
      }
    },
    "drep1y25j98kvqf7t3tj4pvxwrjr2728dsrfekptgg3kxqrr56qqcny8sn": {
      "mandate": 190,
      "metadata": {
        "url": "https://adawallet.io/public_files/MDRep.jsonld",
        "content_hash": "d604fa7dcd2c0efef5524f059bc43c3911eddb6bfca1b048b3985ac5aea19726"
      }
    },
    "drep1y28wyfxwyywajenkfcy0s9r3fqkvufm4stpxy80j4234qzsl80wwe": {
      "mandate": 190,
      "metadata": {
        "url": "https://preprod.handle.me/papagoose",
        "content_hash": "c3c98684edb7f2a0ca72f33db0755677f6de71484d6c41300ae874e19d60a6cc"
      }
    },
    "drep1y29h2q6cst2pvkl2sqqvf5ljcy36uv7pmy482xnczddzgqshus24w": {
      "mandate": 187,
      "metadata": null
    },
    "drep1y2aas36r3epqrz0gehkkkjm9yerwngm53lfsp83szymdtdq2whufp": {
      "mandate": 192,
      "metadata": null
    },
    "drep1y2chj5wktflvn8gq35au3z93npsg3vnvg3ujvvdahv5u30g4azqte": {
      "mandate": 192,
      "metadata": {
        "url": "https://metadata.cardanoapi.io/data/3cfe537ae5f9c053b4fa3aa101b306b1bf51fe720fe4ab8e425b73de0aa9dc8a",
        "content_hash": "3cfe537ae5f9c053b4fa3aa101b306b1bf51fe720fe4ab8e425b73de0aa9dc8a"
      }
    },
    "drep1y2cpz8kmr83z0vumpq5r8zxqpcjnhaqg8h4tt5u4wlhntssndylla": {
      "mandate": 192,
      "metadata": {
        "url": "https://raw.githubusercontent.com/drep-id/data/main/dev/test",
        "content_hash": "7723fb7f278dc49afee82ab37a3d8ed98e7cfa936d8892a30706b545c03d6903"
      }
    },
    "drep1y2fgxycu78q496nj2mzkf2qqedfhv8evw46jd6nus659z0g3n4n6r": {
      "mandate": 186,
      "metadata": null
    },
    "drep1y2j502uqsjl7ujrg5e73mxc2up2wu963r6eg44zdglzanncytjpxy": {
      "mandate": 185,
      "metadata": null
    },
    "drep1y2xuj82kwvjrnrgzsesh2yezg30neehkzwd9ed9kd20f2asze2l6z": {
      "mandate": 187,
      "metadata": null
    },
    "drep1ydmraa6kv8cvmry059v608tehl50nfmg0z764lmsqkvwurs40sw2z": {
      "mandate": 186,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    },
    "drep1yf6rudz7w9kz4etshj0njg7fjtd0c4frgsds6f8e6ep47ygl6sw74": {
      "mandate": 185,
      "metadata": {
        "url": "https://raw.githubusercontent.com/NanaSafo01/drep-metadata/main/WadaDrep.jsonld",
        "content_hash": "8a1971eaccf490599fc7e02c522f0c2012f8d9f0e3f6bcf938b7134b58c617c0"
      }
    },
    "drep1yfs2e9c42nq5fv2ac9ygxrhxllgaz9ms2g0xynaj7dpd58qwg2030": {
      "mandate": 189,
      "metadata": {
        "url": "https://raw.githubusercontent.com/Dangtq84/HA_NHIEN_dReps/main/HA_NHIEN.jsonld",
        "content_hash": "88dbae72d6eb70ef4a8a2b661b990ee4fc89e8abde0686c6878daf90a0a2edcb"
      }
    },
    "drep1yftr2094dxeszxy944y9n5ms5eg3md28adlvk0vqwcn4pgc7kq6wr": {
      "mandate": 185,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/drep_test/Cardano%20Africa%20C.jsonld",
        "content_hash": "59830510a828097b58b8bf1bf23970c1e34a420cc5cb3fe4dce80aa1d8993f11"
      }
    },
    "drep1yfy9wajz7mrc6x5a4s23x5vttztqea6ajx9v83xcr6c5xlqxjx05p": {
      "mandate": 185,
      "metadata": null
    },
    "drep1yg3mcc7w6njqkgkafes9rsjchgud2euas83n7d87tewdkngpgk07n": {
      "mandate": 185,
      "metadata": null
    },
    "drep1yge5qzj9ggvk77rz0vcmq2rpzcgq563e6fmydjngelxtnmgz2g54e": {
      "mandate": 189,
      "metadata": {
        "url": "https://raw.githubusercontent.com/Dangtq84/HA_NHIEN_1/refs/heads/main/HA_NHIEN_1.jsonld",
        "content_hash": "c470d07d3eb20cc757cb3c0d136d49a108287b23fa9edb35f98c8554979f54ac"
      }
    },
    "drep1ygytfjy863rx34wqlhjs3kpk8sxzehl2dullf7h0kpdajdgrga7lc": {
      "mandate": 185,
      "metadata": {
        "url": "https://raw.githubusercontent.com/UPTODATE-DEV/dRep/main/Cardano%20Africa%20C.jsonld",
        "content_hash": "d63edeb7d4b2398103dfc3db3ab409feebd88a1373402b59f8b38a2048b92fb1"
      }
    },
    "drep1yt4tspehdvggcd4e5cwsqlwulvyyrjj9jquuqu5wlyju9ns5wfc0z": {
      "mandate": 186,
      "metadata": null
    },
    "drep1yt5498apq2xmuvugmf0jdd5kp5zd3ccpezn6m2mzsvuh3pqn8x06l": {
      "mandate": 186,
      "metadata": null
    },
    "drep1ytax4rwzvdwamnu67j2uk9z00660lpzcvmlys6266l9kt5c262k7m": {
      "mandate": 185,
      "metadata": null
    },
    "drep1ytg3f3uc0xda26q0q5fkg47dhlmdspm4hl3md8k6gcjk7zccfvsqc": {
      "mandate": 189,
      "metadata": null
    },
    "drep1ytk3r5ddfk2cq66ygdtkwf9yck6hhy7uzhk2tgl5d53448skyutw7": {
      "mandate": 192,
      "metadata": {
        "url": "https://2pzt5hfjckkkpzfl.public.blob.vercel-storage.com/drep/MeshInc-z5TmFSeSbfYqfExWNIJR2TuQ0ThlxK.jsonld",
        "content_hash": "7d157a834ed554bee0d0712d7733a366e6ac022598439b50a928e5a3cb61a8ed"
      }
    },
    "drep1ytsy6uatehlmxymymrwuycph0s6ewwn0jxsnyfq6vs47h4sflw0dg": {
      "mandate": 186,
      "metadata": null
    },
    "drep1yvj9cn7cwc3wyrt3lclk2ua92lxd8uxqzju0qza8ky380uqjpzm8s": {
      "mandate": 185,
      "metadata": null
    },
    "drep1yvmeer7fcwng5ea3v7cw2g2uq352sm58xtmaphp5vqvcxycrzszhz": {
      "mandate": 186,
      "metadata": {
        "url": "https://www.logicalmechanism.io/drepTestnet",
        "content_hash": "55c4ea20e133878ef8c80ddbf3f73adbe3220963a2874f8757d435d60126db41"
      }
    }
  }
}